* (bug 13632) Show white space differences with wikidiff2 too

--- a/skins/common/diff.css
+++ b/skins/common/diff.css
@@ -33,6 +33,8 @@ td.diff-context {
 	color: red;
 	font-weight: bold;
 	text-decoration: none;
+	white-space: pre-wrap;
+	white-space: -moz-pre-wrap;
 }
 .diffchange-inline {
 	border: 1px dotted red;
